remove complete centering of all text on tablets/mobile. replaced the feature image functionallity for a static background image to prevent content flowing out of the banner area

--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -9,20 +9,16 @@
 @media only screen and (min-width: $screen-lg-min) {
 	/*
 	body{
-		background: red;
+		background: green;
 	}
 	*/
-
 }
 
 /* MINIMUM WIDTH OF 992PX AND MAX WIDTH OF 1198PX */
 @media only screen and (max-width: $screen-lg-max) {
-	/*
-	body{
-		background: green;
+	header .menuContainer .row #mainNav .menu>li>a {
+		font-size: 1.8rem
 	}
-	*/
-	
 }
 
 /* MINIMUM WIDTH OF 768PX AND MAX WIDTH OF 991PX */
@@ -108,7 +104,7 @@
 	}
 
 	.col{
-		text-align: center;
+		//text-align: center;
 	}
 
 	.borderSection>div{
